too short of a max height for read more fixed

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -92,7 +92,7 @@ $lf-dark-blue: #14434D;
 }
 
 #more.show {
-  max-height: 1000px; /* вистачить для твого контенту */
+  max-height: 2000px;
   opacity: 1;
 }
 .org-about-us{
